--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@aspida/swr": "^1.7.0",
     "axios": "^0.21.1",
     "class-validator": "^0.13.1",
+    "firebase": "^8.6.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
