--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "firebase-admin": "^9.8.0",
     "helmet": "^4.5.0",
     "multer": "^1.4.2"
   },
