--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express-jwt": "^6.0.0",
     "firebase-admin": "^9.8.0",
     "helmet": "^4.5.0",
+    "jest-mock-extended": "^1.0.14",
     "multer": "^1.4.2"
   },
   "devDependencies": {
