[update] user create api test

--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "generate:frourio": "frourio-express",
     "generate:prisma": "prisma generate",
     "migrate:dev": "prisma migrate dev",
-    "migrate:reset": "prisma migrate reset",
+    "migrate:reset": "prisma migrate reset --force",
     "start": "cross-env NODE_ENV=production node index.js"
   },
   "dependencies": {
