--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^2.21.2",
+    "canvas": "^2.7.0",
     "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -27,13 +28,15 @@
     "firebase-admin": "^9.8.0",
     "helmet": "^4.5.0",
     "jest-mock-extended": "^1.0.14",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "urlsafe-base64": "^1.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express-jwt": "^6.0.1",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/multer": "^1.4.5",
+    "@types/urlsafe-base64": "^1.0.28",
     "cross-env": "^7.0.3",
     "fastify": "^3.15.0",
     "fastify-cors": "^5.2.0",
