--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "firebase-admin": "^9.8.0",
     "helmet": "^4.5.0",
     "jest-mock-extended": "^1.0.14",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "urlsafe-base64": "^1.0.0"
   },
