--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   "dependencies": {
     "@aspida/axios": "^1.7.0",
     "@aspida/swr": "^1.7.0",
+    "@types/react-datepicker": "^3.1.8",
     "axios": "^0.21.1",
     "class-validator": "^0.13.1",
     "firebase": "^8.6.1",
     "next": "^10.1.3",
     "react": "^17.0.2",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "swr": "^0.5.5"
   },
