--- a/package.json
+++ b/package.json
@@ -30,21 +30,27 @@
   "dependencies": {
     "@aspida/axios": "^1.7.0",
     "@aspida/swr": "^1.7.0",
+    "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
     "@types/react-datepicker": "^3.1.8",
+    "autoprefixer": "^10.2.5",
     "axios": "^0.21.1",
     "class-validator": "^0.13.1",
     "firebase": "^8.6.1",
     "next": "^10.1.3",
+    "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
-    "swr": "^0.5.5"
+    "swr": "^0.5.5",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.6",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "@types/tailwindcss": "^2.0.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-jest": "^26.6.3",
@@ -59,6 +65,7 @@
     "jest": "^26.6.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
+    "stylelint-config-recommended": "^5.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^8.1.0",
     "ts-node": "^9.1.1",
