--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "axios": "^0.21.1",
     "class-validator": "^0.13.1",
     "firebase": "^8.6.1",
+    "moment": "^2.29.1",
     "next": "^10.1.3",
     "postcss": "^8.3.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "swr": "^0.5.5",
     "tailwindcss": "^2.1.2"
   },
