--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
+    "recoil": "^0.3.1",
     "swr": "^0.5.5",
     "tailwindcss": "^2.1.2"
   },
